# simple_crud_rest_server

./: README.md  main.py  pyproject.toml
